--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header class="heading">
         <h1>Title Here</h1>
-        <img src="#" alt="Site Logo">
+        <img class="cottage" src="./images/cottage.jpg" alt="Site Logo">
     </header>
     <main class="container">
         <article class="leftContent">
