--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
         <article class="rightContent">
             <aside class="plannedItinerary"></aside>
         </article>
+        <footer>
+           <h4> brought to you by </h4>
+           <img class="elephant-eagles" src="./images/ee-transparent.png" alt="">
+        </footer>
     </main>
 
     <script type="module" src="./scripts/main.js"></script>
