--- a/index.html
+++ b/index.html
@@ -22,9 +22,15 @@
                 <section class="eateryFilter"></section>
             </div>
             <div class="previewContainer">
-                <section class="park"></section>
-                <section class="attractions"></section>
-                <section class="eateries"></section>
+                <section class="park">
+                    <h3>Park:</h3>
+                </section>
+                <section class="attractions">
+                    <h3>Attraction:</h3>
+                </section>
+                <section class="eateries">
+                    <h3>Eatery:</h3>
+                </section>
                 <section class="itineraryButton"></section>
             </div>
         </article>
