remove functionality for attractions only

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </div>
             <div class="previewContainer">
                 <section class="park"></section>
-                <section class="attractions"></section>
+                <section class="attractions">Attraction(s): </section>
                 <section class="eateries"></section>
                 <section class="itineraryButton"></section>
             </div>
