added option to remove preview items from list

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
             </div>
             <div class="previewContainer">
                 <section class="park"></section>
-                <section class="attractions">Attraction(s): </section>
-                <section class="eateries"></section>
+                <section class="attractions"><h3>Attractions: </h3></section>
+                <section class="eateries"><h3>Eateries: </h3></section>
                 <section class="itineraryButton"></section>
             </div>
         </article>
