added div for weather flexing

--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
                 <section class="eateryFilter"></section>
             </div>
             <div class="previewContainer">
-                <section class="park"></section>
+                <div class="parksWeather">
+                    <section class="park"></section>
+                    <section class="weather"></section>
+                </div>
                 <section class="attractions"></section>
                 <section class="eateries"></section>
                 <section class="itineraryButton"></section>
@@ -32,8 +35,8 @@
             <aside class="plannedItinerary"></aside>
         </article>
         <footer>
-           <h4> brought to you by </h4>
-           <img class="elephant-eagles" src="./images/ee-transparent.png" alt="">
+            <h4> brought to you by </h4>
+            <img class="elephant-eagles" src="./images/ee-transparent.png" alt="">
         </footer>
     </main>
 
