created planned itinerary section, save itinerary button works

--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
                 </section>
                 <section class="itineraryButton"></section>
             </div>
+            <br>
+            <button id="saveItinerary">Save</button>
         </article>
         <article class="rightContent">
             <aside class="plannedItinerary"></aside>
