planned itinerary stylings

--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
             <button id="saveItinerary">Save</button>
         </article>
         <article class="rightContent">
+            <h3>Planned Itineraries</h3>
             <aside class="plannedItinerary"></aside>
+            
         </article>
         <footer>
             <h4> brought to you by </h4>
