finsihed header bg syling

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
 <body>
     <header class="heading">
-        <h1>Title Here</h1>
-        <img class="headerImg" src="./images/Header-Image.jpg" alt="header image">
+        <h1 class="siteTitle">Title Here</h1>
+        <!-- <img class="headerImg" src="./images/Header-Image.jpg" alt="header image"> -->
     </header>
     <main class="container">
         <article class="leftContent">
