--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header class="heading">
-        <h1 class="siteTitle">Title Here</h1>
+        <h1 class="siteTitle">ELEPHANT EAGLES' ELEGANT EAGER ITINERARY PLANNER!</h1>
         <!-- <img class="headerImg" src="./images/Header-Image.jpg" alt="header image"> -->
     </header>
     <main class="container">
