began working on search bar. hardcoded into HTML, has no functionality

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     </header>
     <main class="container">
         <article class="leftContent">
+            <input type="text" placeholder="Search..">
             <div class="filterContainer">
                 <section class="parkFilter"></section>
                 <section class="attractionsFilter"></section>
